<resources>
    <string name="app_name">GallerySimple</string>
    <string name="title_picture">Pictures</string>
    <string name="title_album">Albums</string>
    <string name="title_thumbnail">thumbnail</string>
    <string name="title_favorite">favorite</string>
    <string name="title_length">length</string>
    <string name="btn_back">Back</string>
    <string name="btn_detail">Detail</string>
    <string name="title_picture_name">Picture name</string>
    <string name="title_delete">Delete</string>
    <string name="please_waiting">Please Waiting…</string>
    <string name="album_name">Album Name</string>
    <string name="album_items">Album items</string>
    <string name="create_album">Create Album</string>
    <string name="input_album_name">Input Album Name</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_create">Create</string>
    <string name="options">Options</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="album_name_not_valid">Album name not valid</string>
    <string name="save_done">Save Done</string>
    <string name="no_album_available">No Album Available</string>
    <string name="confirm_delete_pic">Confirm Delete Picture</string>
    <string name="media_name">Media Name</string>
    <string name="media_thumbnail">Media Thumbnail</string>
    <string name="restore">Restore</string>
    <string name="confirm_restore">Confirm Restore</string>
    <string name="message_album_unavailable">Album Doesn\'t have item!</string>
</resources>