<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edt_album_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/input_album_name"
        android:autofillHints="name" />

    <LinearLayout
        android:id="@+id/layout_two_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:text="@string/title_cancel"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>