<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#A61F1E1E"
    tools:context=".ui.activity.PictureDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/btn_back"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_picName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/btn_back"
            android:gravity="center_vertical"
            android:maxLength="20"
            android:textSize="24sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/title_picture_name"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@+id/btn_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ic_info"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/btn_detail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_picture"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:scaleType="centerInside"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:contentDescription="@string/title_picture"
        app:layout_constraintTop_toBottomOf="@+id/top_container"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_favorite_white"
            android:contentDescription="@string/title_favorite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_delete" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_delete"
            android:contentDescription="@string/title_delete"
            app:layout_constraintLeft_toRightOf="@id/btn_favorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_item_to_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_folder"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/create_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/video_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top_container"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone">
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>