<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clipChildren="false">

        <ImageView
            android:id="@+id/img_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/title_thumbnail" />

        <ImageButton
            android:id="@+id/imgBtn_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_favorite"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/title_favorite"
            android:visibility="gone"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_length"
            android:maxLength="8"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_alignEnd="@+id/imgBtn_favorite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>